package proyectoEmpleado.Clases;

import java.util.List;

public interface IEmpleadoRepository {
    List<Empleado> obtenerEmpleados();
}
